Fixed visibility bug of the sign-up form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,7 @@ body {
 }
 
 .form-jumbotron {
-    background-color: rgba(62, 62, 62, 0.66);
+    background-color: rgba(62, 62, 62, 0.8);
     border: 0.5rem solid #191919;
     max-width: 40rem;
     height: 50rem;
@@ -300,6 +300,7 @@ body {
 }
 
 .form-input {
+    color: #E74F0D;
     background: transparent;
     width: 100%;
     height: 2.5rem;
